--- a/app/src/main/res/layout/activity_explore.xml
+++ b/app/src/main/res/layout/activity_explore.xml
@@ -1,69 +1,80 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--suppress ALL -->
-<RelativeLayout
+<androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/rootLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     tools:context=".Activity.Navbar.ExploreActivity">
 
+    <!-- Category RecyclerView (horizontal chips-like style) -->
+<androidx.recyclerview.widget.RecyclerView
+android:id="@+id/recyclerViewCategoryExplore"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:layout_marginTop="24dp"
+android:paddingStart="16dp"
+android:paddingEnd="16dp"
+android:overScrollMode="never"
+android:clipToPadding="false"
+android:layout_alignParentTop="true"
+android:nestedScrollingEnabled="false" />
+
     <!-- Scrollable content -->
-    <androidx.core.widget.NestedScrollView
-        android:id="@+id/scrollViewMain"
+<androidx.core.widget.NestedScrollView
+android:id="@+id/scrollViewMain"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:layout_below="@id/recyclerViewCategoryExplore"
+android:layout_above="@id/bottomNavigation"
+android:paddingTop="12dp"
+android:paddingBottom="100dp"
+android:clipToPadding="false"
+android:overScrollMode="never">
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:paddingStart="16dp"
+    android:paddingEnd="16dp">
+
+    <!-- ProgressBar -->
+    <ProgressBar
+        android:id="@+id/progressBarCategoryExplore"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp" />
+
+    <!-- Recent Jobs RecyclerView -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewExplore"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/bottomNavigation"
-        android:layout_marginTop="8dp">
+        android:layout_height="wrap_content"
+        android:clipToPadding="false"
+        android:nestedScrollingEnabled="false"
+        android:paddingBottom="16dp"
+        android:overScrollMode="never" />
+</LinearLayout>
+</androidx.core.widget.NestedScrollView>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingBottom="100dp"> <!-- To avoid content getting hidden behind navbar -->
-
-            <!-- Purple Header -->
-
-
-            <!-- Categories Section -->
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerViewCategoryExplore"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:clipToPadding="false"
-                android:paddingStart="16dp"
-                android:paddingEnd="16dp"
-                android:layout_marginTop="16dp"
-                android:nestedScrollingEnabled="false"/>
-
-            <ProgressBar
-                android:id="@+id/progressBarCategoryExplore"
-                style="?android:attr/progressBarStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="8dp"/>
-
-            <!-- Recent Jobs Section -->
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerViewExplore"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:clipToPadding="false"
-                android:paddingStart="8dp"
-                android:paddingEnd="8dp"
-                android:layout_marginTop="16dp"
-                android:nestedScrollingEnabled="false"/>
-        </LinearLayout>
-    </androidx.core.widget.NestedScrollView>
-
-    <!-- Bottom Navigation Bar -->
-    <include
+    <!-- Modern Bottom Navigation Bar -->
+    <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigation"
-        layout="@layout/bottom_navbar_menu"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:layout_alignParentBottom="true"/>
-</RelativeLayout>
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:background="#3b3b3b"
+        app:labelVisibilityMode="labeled"
+        app:itemIconSize="24dp"
+        app:itemTextColor="@color/white"
+        app:itemIconTint="@color/white"
+        app:itemTextAppearanceActive="@style/BottomNavText"
+        app:itemTextAppearanceInactive="@style/BottomNavText"
+        app:menu="@menu/bottom_nav_menu"/>
 
-
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
