--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="160dp"
     android:background="@color/purple"
-    android:gravity="bottom"
+    android:gravity="center"
     android:orientation="vertical"
     android:padding="16dp">
 
@@ -20,7 +20,7 @@
         android:id="@+id/nav_header_subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Explore Jobs"
+        android:text="To Smile Job Portal"
         android:textColor="@android:color/white"
         android:textSize="14sp" />
 </LinearLayout>
