--- a/app/src/main/res/layout/viewholder_job_explore.xml
+++ b/app/src/main/res/layout/viewholder_job_explore.xml
@@ -23,7 +23,7 @@
     <TextView
         android:id="@+id/titleTxt"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="18dp"
         android:layout_marginStart="16dp"
         android:text="title"
         android:textColor="@color/black"
